played around with html and css possibilites

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-hello world, this will be my portfolio soon!
+<!doctype html>
+<html class="no-js" lang="">
+  <head>
+    <meta charset="utf-8">
+    <title>Daniel Mercia Portfolio</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="index.css">
+  </head>
+  <body>
+  	<header>
+
+ 		<nav>
+ 			<ul>
+				<li><a href="">About Me</a></li>
+				<li><a href="">Projects</a></li>
+				<li><a href="">Resume</a></li>
+				<li><a href="">Contact Me</a></li>
+    		</ul>
+ 		</nav>
+	 </header>
+	 	<h1>This will likely be the about me page</h1>
+	 	<h3>I don't plan to use the current colors and designs, I'm just playing around with the possibilites at the moment.</h3>
+
+	 <footer>
+	 	<p>I will think about what I should put here</p>
+
+	 </footer>
+  </body>
+</html>
