--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     		</ul>
  		</nav>
 	 </header>
-	 	<h1>This will likely be the about me page</h1>
+	 	<h1>This will likely be the about me getting fucked!
+      e</h1>
 	 	<h3>I don't plan to use the current colors and designs, I'm just playing around with the possibilites at the moment.</h3>
 
 	 <footer>
