--- a/cleanser.html
+++ b/cleanser.html
@@ -189,44 +189,81 @@
                 <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
     <div class="col-md-7">
-      <h3>Contact Us</h3>
-      <form id="contact-form" method="post" action="contact.php">
-        <div class="messages"></div>
-        <div class="controls">
-          <div class="form-group">
-            <input
-              id="form_name"
-              type="text"
-              name="name"
-              class="form-control"
-              placeholder="Enter your name"
-              required="required"
-            >
-          </div>
-          <div class="form-group">
-            <input
-              id="form_email"
-              type="email"
-              name="email"
-              class="form-control"
-              placeholder="Enter your email"
-              required="required"
-            >
-          </div>
-          <div class="form-group">
-            <textarea
-              id="form_message"
-              name="message"
-              class="form-control"
-              placeholder="Message"
-              rows="4"
-              required="required"
-            >
-          </textarea>
-        </div>
-          <input type="submit" class="btn btn-outline-light btn-sm" value="submit">
-          </div>
-      </form>
+      <footer>
+    <div class="row">
+    <div class="col-md-5">
+      <h1>Information</h1>
+      <strong>Address</strong>
+      <p>A-108, Sector-10, Noida, Gautam Buddha<br>Nagar, UP, India</p>
+      <strong>General Support</strong>
+      <p>Sales@Seoul-made.com</p>
+
+        <a href="About.html">About Us<a>
+          <br>
+        <a href="Privacy.html">Privacy Policy</a>
+        <br>
+        <a href="Refund.html">Refund Policy</a>
+        <br>
+        <a href="Shipping.html">Shipping Policy</a>
+        <br>
+        <a href="Return.html">Return Policy</a>
+        <br>
+        <a href="Terms.html">Terms & Conditions</a>
+        <br>
+
+
+
+      <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+      <a href="https://twitter.com/home"><i class="fab fa-twitter-square"></i></a>
+      <a href="https://www.instagram.com/seoulmade_aa/?hl=en"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-square"></i></a>
+      <a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a>
+
+
+</div>
+<div class="col-md-7">
+<h3>Contact Us</h3>
+<form id="contact-form" method="post" action="contact.php">
+<div class="messages"></div>
+<div class="controls">
+<div class="form-group">
+  <input
+    id="form_name"
+    type="text"
+    name="name"
+    class="form-control"
+    placeholder="Enter your name"
+    required="required"
+  >
+</div>
+<div class="form-group">
+  <input
+    id="form_email"
+    type="email"
+    name="email"
+    class="form-control"
+    placeholder="Enter your email"
+    required="required"
+  >
+</div>
+<div class="form-group">
+  <textarea
+    id="form_message"
+    name="message"
+    class="form-control"
+    placeholder="Message"
+    rows="4"
+    required="required"
+  >
+</textarea>
+</div>
+<input type="submit" class="btn btn-outline-light btn-sm" value="submit">
+</div>
+</form>
+</div>
+
+    </div>
+  </footer>
     </div>
 
               </div>
