--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body data-spy="scroll" data.target="#navbarResponsive">
       <div id="home">
-        <nav class="navbar navbar-expand-lg fixed-top" >
+        <nav class="navbar navbar-expand-md fixed-top always-solid" >
           <div class="container-fluid">
             <a class="navbar-brand" href="#"> <img src="../img/logo.jpg"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
@@ -30,22 +30,22 @@
                   <a class="nav-link" href="cleanser.html">CLEANSER</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#toner">TONER/AMPOULE</a>
+                  <a class="nav-link" href="toner.html">TONER/AMPOULE</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#serum">SERUM</a>
+                  <a class="nav-link" href="serum.html">SERUM</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#cream">MOISTURISER/CREAM</a>
+                  <a class="nav-link" href="moisturizer.html">MOISTURISER/CREAM</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#cream">FULL SET</a>
+                  <a class="nav-link" href="set.html">FULL SET</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#eyes">EYE CREAM</a>
+                  <a class="nav-link" href="eyes.html">EYE CREAM</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#about">ABOUT US</a>
+                  <a class="nav-link" href="about.html">ABOUT US</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#contact">CONTACT US</a>
@@ -53,369 +53,223 @@
               </ul>
                 <ul class="navbar-nav ml-auto">
                 <li>
-                <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+                <a href="#"><i class="fab fa-facebook-square"></i></a>
               </li>
               <li>
-                <a href="https://twitter.com/home"><i class="fab fa-twitter-square"></i></a>
+                <a href="#"><i class="fab fa-twitter-square"></i></a>
               </li>
               <li>
-                <a href="https://www.instagram.com/seoulmade_aa/?hl=en"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
               </li>
               <li>
-                <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-square"></i></a>
+                <a href="#"><i class="fab fa-pinterest-square"></i></a>
               </li>
               <li>
-                <a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a>
+                <a href="#"><i class="fab fa-youtube-square"></i></a>
               </li>
 
               </ul>
             </div>
           </div>
         </nav>
-        <div class="landing">
-          <div class="home-wrap">
-            <div class="home-inner">
-            </div>
-          </div>
-        </div>
-      <div class="caption center-block text-center">
-          <div class="animated bounceInUp" data-animated-delay="3s">
-            <h1>WELCOME TO SEOUL MADE</h1>
-          </div>
-          <div class="animated bounceInUp" data-animated-delay="3s">
-            <h3>Company slogan can go here</h3>
-          </div>
-          <div class="animated bounceInUp" data-animated-delay="3s">
-            <a class="btn btn-outline-light btn-lg" href="#toner">View Our products</a>
-          </div>
-          <div class="os-animation" data-animation="" data-animated-delay="">
-            <a class="btn btn-outline-light btn-lg" href="#toner">Get Started</a>
-          </div>
       </div>
-      <a class="down-arrow" href="#toner">
-        <div class="arrow bounce d-none d-md-block">
-          <i class="fas fa-angle-double-down" aria-hidden="true"></i>
-        </div>
-      </a>
-    </div>
-      <div id="cleanser" class="offset">
-        <div  data-animation="fadeInUp">
-          <div class="narrow text-center">
-            <div class="col-12">
-              <h1>About our products</h1>
-              <p class="lead">Learn about our amazing products</p>
-              <a class="btn btn-secondary btn-sm" href="#contact">Request A Quote</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="jumbotron">
-        <div class="narrow">
-          <div class="animated bounceInUp">
-            <h3 class="heading">Products</h3>
-            <div class="heading-underline"></div>
-          </div>
-          <div class="row">
-            <div class="col-sm-6 col-md-4">
-              <div class="animated fadeInLeft">
-                <div class="product">
-                  <span class="fa-layers fa-4x">
-                    <a> <img class="photo" src="../img/flowers.jpg"></a>
-                  </span>
-              </div>
-          </div>
-        </div>
-               <div class="col-sm-4 col-md-4">
-          <div class="animated fadeInRight">
-            <div class="product">
-              <span class="fa-layers fa-4x">
-                <a> <img class="photo" src="../img/flowers.jpg"></a>
-              </span>
-          </div>
-      </div>
-    </div>
-  </div>
-      </div>
-    </div>
-        <div class="fixed-background">
-          <div class="row dark">
-            <div class="col-12 animated fadeInUp">
-              <h3 class="heading">Events</h3>
-              <div class=heading-underline></div>
-            </div>
-
-            <div class="col-md-4">
-            <div class="animated fadeInLeft">
-              <h3>Event 1</h3>
-            </div>
-          </div>
-          <div class="fixed-wrap">
-            <div id="fixed">
-            </div>
-          </div>
-        </div>
-        </div>
-      </div>
-<!--Use for items screen-->
-      <div id="toner" class="offset">
-          <div class="row padding">
-        <div class="col-12 animated fadeInUp">
-          <h3 class="heading">Toner</h3>
-          <div class=heading-underline></div>
-        </div>
-      </div>
+      <div id="title-heading">
+<div class="row">
+	<div class="col-12">
+	<h3 class="heading">CLEANSER</h3>
+	<div class="heading-underline">
+	</div>
+</div>
+</div>
       <!--start of grid-->
       <div class="container-fluid">
       <div class="row no-padding">
 
         <div class="coll-sm-6 col-md-3">
           <div class="animated bounceInLeft" data-delay=".2s">
-            <div class="portfolio-item">
-              <a href="../img/flowers.jpg" data-lightbox="example-set">
+            <div class="card">
+            <a href="product.html" >
                 <img class="example-image" src="../img/flowers.jpg" alt="">
               </a>
+              <h3>Product Name</h3>
         </div>
       </div>
     </div>
     <div class="coll-sm-6 col-md-3">
       <div class="animated bounceInLeft">
-        <div class="portfolio-item">
-          <a href="../img/flowers.jpg" data-lightbox="example-set">
-            <img class="example-image" src="../img/flowers.jpg" alt="">
+        <div class="card">
+          <a href="product.html" >
+            <img class="example-image" src="../img/mist.jpg" alt="">
           </a>
+          <h3>Product Name</h3>
     </div>
   </div>
 </div>
 <div class="coll-sm-6 col-md-3">
   <div class="animated bounceInRight">
-    <div class="portfolio-item">
-      <a href="../img/flowers.jpg" data-lightbox="example-set">
-        <img class="example-image" src="../img/flowers.jpg" alt="">
+    <div class="card">
+      <a href="product.html" >
+        <img class="example-image" src="../img/cream.jpg" alt="">
       </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
 <div class="coll-sm-6 col-md-3">
   <div class="animated bounceInRight" data-delay=".2s">
-    <div class="portfolio-item">
-      <a href="../img/flowers.jpg" data-lightbox="example-set">
+    <div class="card">
+      <a href="product.html" >
         <img class="example-image" src="../img/flowers.jpg" alt="">
       </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
 <div class="coll-sm-6 col-md-3">
-  <div class="animated bounceInLeft" data-delay=".2s">
-    <div class="portfolio-item">
-      <a href="../img/flowers.jpg" data-lightbox="example-set">
-        <img class="example-image" src="../img/flowers.jpg" alt="">
-      </a>
+  <div class="animated bounceInLeft slow">
+    <div class="card">
+  <a href="product.html" >
+      <img class="example-image" src="../img/mist.jpg" alt="">
+    </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
 <div class="coll-sm-6 col-md-3">
   <div class="animated bounceInLeft">
-    <div class="portfolio-item">
-      <a href="../img/flowers.jpg" data-lightbox="example-set">
+    <div class="card">
+      <a href="product.html" >
         <img class="example-image" src="../img/flowers.jpg" alt="">
       </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
 <div class="coll-sm-6 col-md-3">
   <div class="animated bounceInRight">
-    <div class="portfolio-item">
-      <a href="./img/flowers.jpg" data-lightbox="example-set">
-        <img class="example-image" src="../img/flowers.jpg" alt="">
+    <div class="card">
+      <a href="product.html" >
+        <img class="example-image" src="../img/cactus.jpg" alt="">
       </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
 <div class="coll-sm-6 col-md-3">
   <div class="animated bounceInRight" data-delay=".2s">
-    <div class="portfolio-item">
-      <a href="../img/flowers.jpg" data-lightbox="example-set">
-        <img class="example-image" src="../img/flowers.jpg" alt="">
+    <div class="card">
+    <a href="product.html" >
+        <img class="example-image" src="../img/paint.jpg" alt="">
       </a>
+      <h3>Product Name</h3>
 </div>
 </div>
 </div>
-<!--end of grid-->
-<div class="animated fadeInUp">
-<div class="narrow text-center">
-  <div class="col-12">
-    <p class="lead">Learn about our amazing products</p>
-    <a class="btn btn-secondary btn-sm" href="#contact">Contact us</a>
-  </div>
-</div>
-</div>
-</div>
-</div>
-<!--This will be the about section-->
-      <div id="item" class="offset">
-        <div class="fixed-background">
-        <div class="row light">
-          <div class="col-12 animated fadeInUp">
-            <h3 class="heading">Serum</h3>
-            <div class="heading-underline"></div>
-          </div>
-          <div class="col-md-12">
-            <div class="animated fadeInUp">
-              <div id="item-slider" class="owl-carousel owl-theme">
-                <div class="card text-center">
-                  <img class="card-img-top" src="../img/team/team1.png" alt="">
-                  <div class="card-body">
-                    <h4>Daniel Mercia</h4>
-                    <h5>This Guy Fucks</h5>
-                    <p>Killing it since forever</p>
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-            </div>
-          </div>
-          <div class="card text-center">
-            <img class="card-img-top" src="../img/team/team2.png" alt="">
-            <div class="card-body">
-              <h4>Mrs.Lame Fuck</h4>
-              <h5>This Girl Fucks</h5>
-              <p>Killing it since forever</p>
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin"></i></a>
-      </div>
-    </div>
-    <div class="card text-center">
-      <img class="card-img-top" src="../img/team/team3.png" alt="">
-      <div class="card-body">
-        <h4>Turdle</h4>
-        <h5>This Guy also Fucks</h5>
-        <p>Killing it since forever</p>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-</div>
-</div>
-    <div class="card text-center">
-      <img class="card-img-top" src="../img/team/team4.png" alt="">
-      <div class="card-body">
-        <h4>Danielle Merciaturd</h4>
-        <h5>This Girl Also Fucks</h5>
-        <p>Killing it since forever</p>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
 </div>
 </div>
 
-        </div>
-      </div>
-      </div>
-</div>
-<div class="fixed-wrap">
-  <div id="fixed-2">
-  </div>
-</div>
-</div>
-      <div id="cream" class="offset">
-
-      </div>
-
-      <div id="set" class="offset">
-
-      </div>
-
-      <div id="eyes" class="offset">
-
-      </div>
-
-      <div id="about" class="offset">
 
 
-      </div>
-    </div>
-  </div>
-
-      <div id="contact" class="offset">
-        <footer>
-          <div class="row">
-          <div class="col-md-5">
-            <h1>Information</h1>
-            <strong>Address</strong>
-            <p>A-108, Sector-10, Noida, Gautam Buddha<br>Nagar, UP, India</p>
-            <strong>General Support</strong>
-            <p>Sales@Seoul-made.com</p>
-
-              <a href="About.html">About Us<a>
+          <div id="contact" class="offset">
+            <footer>
+              <div class="row">
+              <div class="col-md-5">
+                <img src="img/nuno.png" alt="">
+                <h1>OFFICE</h1>
                 <br>
-              <a href="Privacy.html">Privacy Policy</a>
+                  <i class="fas fa-map-marker-alt"></i>
+                <strong>Address</strong>
+                <p>A-108, Sector-10, Noida, Gautam Buddha<br>Nagar, UP, India</p>
+                <i class="far fa-envelope"></i>
+                <strong>General Support</strong>
+                <p>Sales@Seoul-made.com</p>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-linkedin"></i></a>
+    </div>
+    <div class="col-md-7">
+      <h3>Contact Us</h3>
+      <footer>
+        <div class="row">
+        <div class="col-md-5">
+          <h1>Information</h1>
+          <strong>Address</strong>
+          <p>A-108, Sector-10, Noida, Gautam Buddha<br>Nagar, UP, India</p>
+          <strong>General Support</strong>
+          <p>Sales@Seoul-made.com</p>
+
+            <a href="About.html">About Us<a>
               <br>
-              <a href="Refund.html">Refund Policy</a>
-              <br>
-              <a href="Shipping.html">Shipping Policy</a>
-              <br>
-              <a href="Return.html">Return Policy</a>
-              <br>
-              <a href="Terms.html">Terms & Conditions</a>
-              <br>
+            <a href="Privacy.html">Privacy Policy</a>
+            <br>
+            <a href="Refund.html">Refund Policy</a>
+            <br>
+            <a href="Shipping.html">Shipping Policy</a>
+            <br>
+            <a href="Return.html">Return Policy</a>
+            <br>
+            <a href="Terms.html">Terms & Conditions</a>
+            <br>
 
 
 
-            <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://twitter.com/home"><i class="fab fa-twitter-square"></i></a>
-            <a href="https://www.instagram.com/seoulmade_aa/?hl=en"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-square"></i></a>
-            <a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a>
+          <a href="https://www.facebook.com/"><i class="fab fa-facebook-square"></i></a>
+          <a href="https://twitter.com/home"><i class="fab fa-twitter-square"></i></a>
+          <a href="https://www.instagram.com/seoulmade_aa/?hl=en"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-square"></i></a>
+          <a href="https://www.youtube.com/"><i class="fab fa-youtube-square"></i></a>
 
 
 </div>
 <div class="col-md-7">
-  <h3>Contact Us</h3>
-  <form id="contact-form" method="post" action="contact.php">
-    <div class="messages"></div>
-    <div class="controls">
-      <div class="form-group">
-        <input
-          id="form_name"
-          type="text"
-          name="name"
-          class="form-control"
-          placeholder="Enter your name"
-          required="required"
-        >
-      </div>
-      <div class="form-group">
-        <input
-          id="form_email"
-          type="email"
-          name="email"
-          class="form-control"
-          placeholder="Enter your email"
-          required="required"
-        >
-      </div>
-      <div class="form-group">
-        <textarea
-          id="form_message"
-          name="message"
-          class="form-control"
-          placeholder="Message"
-          rows="4"
-          required="required"
-        >
-      </textarea>
+<h3>Contact Us</h3>
+<form id="contact-form" method="post" action="contact.php">
+  <div class="messages"></div>
+  <div class="controls">
+    <div class="form-group">
+      <input
+        id="form_name"
+        type="text"
+        name="name"
+        class="form-control"
+        placeholder="Enter your name"
+        required="required"
+      >
     </div>
-      <input type="submit" class="btn btn-outline-light btn-sm" value="submit">
-      </div>
-  </form>
+    <div class="form-group">
+      <input
+        id="form_email"
+        type="email"
+        name="email"
+        class="form-control"
+        placeholder="Enter your email"
+        required="required"
+      >
+    </div>
+    <div class="form-group">
+      <textarea
+        id="form_message"
+        name="message"
+        class="form-control"
+        placeholder="Message"
+        rows="4"
+        required="required"
+      >
+    </textarea>
+  </div>
+    <input type="submit" class="btn btn-outline-light btn-sm" value="submit">
+    </div>
+</form>
 </div>
 
+        </div>
+      </footer>
+    </div>
+
+              </div>
+            </footer>
           </div>
-        </footer>
-      </div>
 
 
       <!--- JS source files -->
