--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width", "initial-scale-1">
       <title>Seoul-Made</title>
-      <Link rel="shortcut icon" href="./Assets/favicon.ico">
+      <Link rel="shortcut icon" href="../Assets/favicon.ico">
       <link rel="stylesheet" href="./css/bootstrap-4.1.3-dist/css/bootstrap.min.css">
       <link rel="stylesheet" href="./style.css">
       <link rel="stylesheet" href="./css/animate.css">
@@ -272,17 +272,16 @@
           </div>
 
 
-      <!--- JS source files -->
-      <Script src="./js/jquery-3.3.1.min.js"></script>
-      <Script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
-      <script src="./bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
-      <Script src="./js/jquery.counterup.js"></script>
-      <Script src="./js/contact.js"></script>
-      <Script src="./js/custom.js"></script>
-      <Script src="./js/lightbox.js"></script>
-      <Script src="./js/owl.carousel.js"></script>
-      <Script src="./js/validator.js"></script>
-      <Script src="./js/waypoints.js"></script>
-      <!--- end of JS source files -->
-    </body>
-  </html>
+          <Script src="./js/jquery-3.3.1.min.js"></script>
+          <Script src="https://use.fontawesome.com/releases/v5.5.0/js/all.js"></script>
+          <script src="./bootstrap-4.3.1-dist/js/bootstrap.min.js"></script>
+          <Script src="./js/jquery.counterup.js"></script>
+          <Script src="./js/contact.js"></script>
+          <Script src="./js/custom.js"></script>
+          <Script src="./js/lightbox.js"></script>
+          <Script src="./js/owl.carousel.js"></script>
+          <Script src="./js/validator.js"></script>
+          <Script src="./js/waypoints.js"></script>
+
+        </body>
+      </html>
